-
Bug
-
Resolution: Fixed
-
P2: Important
-
None
-
6.6
-
None
-
ee1ce7498 (dev)
You can see we're using full bars in the graphgallery bars example. When background is visible, we should be using the "empty" meshes instead of filled ones, i.e. we should not see the green rectangles where the negative bars are.
- relates to
-
QTBUG-112238 Bars3D floor does not follow background visibility in theme
-
- Closed
-
| For Gerrit Dashboard: QTBUG-112329 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 470294,3 | Fix the mismatching problem between floor visibility and bar meshes | dev | qt/qtgraphs | Status: MERGED | +2 | 0 |