Fix the mismatching problem between floor visibility and bar meshes

Task-number: QTBUG-112329
Change-Id: If30a5b49afccae15be5f3143035373b7cd5fdf64
Reviewed-by: Kwanghyo Park <kwanghyo.park@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>